nested/sqlServer.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "sqlServerSettings": {
            "type": "object"
        },
        "networkSettings": {
            "type": "object"
        },
        "apiVersions": {
            "type": "object"
        }
    },
    "variables": {
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks',parameters('networkSettings').virtualNetworkName)]",
        "subnetRef": "[concat(variables('vnetId'), '/subnets/',parameters('networkSettings').subnet4Name)]"
    },
    "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[parameters('sqlServerSettings').sqlStorageAccountName]",
            "apiVersion": "[parameters('apiVersions').storageApiVersion]",
            "location": "[parameters('sqlServerSettings').location]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage",
            "properties": {}
        },
        {
            "name": "[parameters('sqlServerSettings').networkSecurityGroupName]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('sqlServerSettings').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "default-allow-sql",
                        "properties": {
                            "priority": 1001,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "1433",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "priority": 1002,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Outbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "PIData",
                        "properties": {
                            "priority": 1600,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "5450",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "SQLAnalysis2383",
                        "properties": {
                            "priority": 2000,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "2383",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "SQLAnalysis2382",
                        "properties": {
                            "priority": 2100,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "2382",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "priority": 100,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "80",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "PIUFLConnector",
                        "properties": {
                            "priority": 2200,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "5460",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "PIServer",
                        "properties": {
                            "priority": 2201,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "5457",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('sqlServerSettings').networkInterfaceName]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('sqlServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('sqlServerSettings').networkSecurityGroupName)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('sqlServerSettings').sqlPrivateIPAddress]"
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('sqlServerSettings').networkSecurityGroupName)]"
                }
            }
        },
        {
            "name": "[parameters('sqlServerSettings').sqlservername]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('sqlServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('sqlServerSettings').networkInterfaceName)]",
                "[concat('Microsoft.Storage/storageAccounts/', parameters('sqlServerSettings').sqlStorageAccountName)]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[parameters('sqlServerSettings').sqlservername]",
                    "adminUsername": "[parameters('sqlServerSettings').adminUsername]",
                    "adminPassword": "[parameters('sqlServerSettings').adminPassword]",
                    "windowsConfiguration": {
                        "provisionVmAgent": "true"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('sqlServerSettings').vmSize]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('sqlServerSettings').publisher]",
                        "offer": "[parameters('sqlServerSettings').offer]",
                        "sku": "[parameters('sqlServerSettings').sku]",
                        "version": "[parameters('sqlServerSettings').version]"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('sqlServerSettings').storageAccountType]"
                        }
                    },
                    "dataDisks": [
                        {
                            "diskSizeGB": "1023",
                            "lun": 0,
                            "createOption": "Empty"
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('sqlServerSettings').networkInterfaceName)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": "true",
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', parameters('sqlServerSettings').sqlStorageAccountName)).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('sqlServerSettings').sqlservername, '/SqlIaasExtension')]",
            "location": "[parameters('sqlServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('sqlServerSettings').sqlservername)]"
            ],
            "properties": {
                "type": "SqlIaaSAgent",
                "publisher": "Microsoft.SqlServer.Management",
                "typeHandlerVersion": "1.2",
                "autoUpgradeMinorVersion": "true",
                "settings": {
                    "AutoTelemetrySettings": {
                        "Region": "[parameters('sqlServerSettings').location]"
                    },
                    "AutoPatchingSettings": {
                        "PatchCategory": "WindowsMandatoryUpdates",
                        "Enable": true,
                        "DayOfWeek": "[parameters('sqlServerSettings').sqlAutopatchingDayOfWeek]",
                        "MaintenanceWindowStartingHour": "[parameters('sqlServerSettings').sqlAutopatchingStartHour]",
                        "MaintenanceWindowDuration": "[parameters('sqlServerSettings').sqlAutopatchingWindowDuration]"
                    },
                    "KeyVaultCredentialSettings": {
                        "Enable": false,
                        "CredentialName": ""
                    },
                    "ServerConfigurationsManagementSettings": {
                        "SQLConnectivityUpdateSettings": {
                            "ConnectivityType": "[parameters('sqlServerSettings').sqlConnectivityType]",
                            "Port": "1433"
                        },
                        "SQLWorkloadTypeUpdateSettings": {
                            "SQLWorkloadType": "[parameters('sqlServerSettings').sqlStorageWorkloadType]"
                        },
                        "SQLStorageUpdateSettings": {
                            "DiskCount": "[parameters('sqlServerSettings').sqlStorageDisksCount]",
                            "NumberOfColumns": "[parameters('sqlServerSettings').sqlStorageDisksCount]",
                            "StartingDeviceID": "2",
                            "DiskConfigurationType": "New"
                        },
                        "AdditionalFeaturesServerConfigurations": {
                            "IsRServicesEnabled": "false"
                        }
                    }
                },
                "protectedSettings": {
                    "SQLAuthUpdateUserName": "[parameters('sqlServerSettings').sqlAuthenticationLogin]",
                    "SQLAuthUpdatePassword": "[parameters('sqlServerSettings').sqlAuthenticationPassword]"
                }
            }
        },
        {
            "type": "Microsoft.Resources/deployments",
            "name": "sqlSimulatorSetup",
            "apiVersion": "[parameters('apiVersions').deploymentApiVersion]",
            "dependsOn": [
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[concat(parameters('sqlServerSettings').baseUrl, 'nested/sqlsimulator.json')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "sqlservername": {
                        "value": "[parameters('sqlServerSettings').sqlservername]"
                    },
                    "computeApiVersion": {
                        "value": "[parameters('apiVersions').computeApiVersion]"
                    },
                    "location": {
                        "value": "[parameters('sqlServerSettings').location]"
                    },
                    "fileUris3": {
                        "value": "[parameters('sqlServerSettings').fileUris3]"
                    },
                    "scriptFileName3": {
                        "value": "[parameters('sqlServerSettings').scriptFileName3]"
                    },
                    "simulatorUrl": {
                        "value": "[parameters('sqlServerSettings').simulatorUrl]"
                    },
                    "dataserviceUrl": {
                        "value": "[parameters('sqlServerSettings').dataserviceUrl]"
                    },
                    "PIWebApiSimulatorUrl": {
                        "value": "[parameters('sqlServerSettings').PIWebApiSimulatorUrl]"
                    }
                }
            }
        },
        {
            "name": "[concat(parameters('sqlServerSettings').sqlservername,'/CustomScriptExtension')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "location": "[resourceGroup().location]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "dependsOn": [
                "sqlSimulatorSetup",
                "[concat('Microsoft.Compute/virtualMachines/',parameters('sqlServerSettings').sqlservername,'/extensions/SqlIaasExtension')]"
            ],
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[parameters('sqlServerSettings').fileUris]"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat ('powershell -ExecutionPolicy Unrestricted -File ', parameters('sqlServerSettings').scriptFileName,' ',parameters('sqlServerSettings').domainName,' ',parameters('sqlServerSettings').Username,' ',parameters('sqlServerSettings').Password)]"
                }
            }
        }
    ],
    "outputs": {
        "storageKey": {
            "type": "string",
            "value": "[listKeys(resourceId('Microsoft.Storage/storageAccounts', parameters('sqlServerSettings').sqlStorageAccountName), providers('Microsoft.Storage', 'storageAccounts').apiVersions[0]).keys[0].value]"
        },
        "storageAccountName": {
            "type": "string",
            "value": "[parameters('sqlServerSettings').sqlStorageAccountName]"
        }
    }
}
